Generalize dirty bits and the overflow recalc tree walk to non-blocks.

Currently, it is assumed that all objects are either blocks,
tables or table sections. However, this is not correct, in the
presence of elements underneath a replaced
object's shadow root, since LayoutReplaced is a LayoutBox and not
a LayoutBlock.

Bug: 777338
Change-Id: Ic83e6f74ff87b6baea6b1cf68d1cd9d841b8080e
Reviewed-on: https://chromium-review.googlesource.com/777845
Reviewed-by: Christian Biesinger <cbiesinger@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#520308}
Former-commit-id: 4cabfbfd5efa0557b64692c1ab10047b1eaec9b5