third_party/WebKit/Source/core/layout/LayoutBlock.cpp
@@ -1992,12 +1992,9 @@ LayoutBlock* LayoutBlock::CreateAnonymousWithParentAndDisplay(
 
 bool LayoutBlock::RecalcNormalFlowChildOverflowIfNeeded(
     LayoutObject* layout_object) {
-  if (layout_object->IsOutOfFlowPositioned() ||
-      !layout_object->NeedsOverflowRecalcAfterStyleChange())
+  if (layout_object->IsOutOfFlowPositioned())
     return false;
-
-  DCHECK(layout_object->IsLayoutBlock());
-  return ToLayoutBlock(layout_object)->RecalcOverflowAfterStyleChange();
+  return layout_object->RecalcOverflowAfterStyleChange();
 }
 
 bool LayoutBlock::RecalcChildOverflowAfterStyleChange() {
@@ -2029,21 +2026,13 @@ bool LayoutBlock::RecalcPositionedDescendantsOverflowAfterStyleChange() {
     return children_overflow_changed;
 
   for (auto* box : *positioned_descendants) {
-    if (!box->NeedsOverflowRecalcAfterStyleChange())
-      continue;
-    LayoutBlock* block = ToLayoutBlock(box);
-    if (!block->RecalcOverflowAfterStyleChange() ||
-        box->Style()->GetPosition() == EPosition::kFixed)
-      continue;
-
-    children_overflow_changed = true;
+    if (box->RecalcOverflowAfterStyleChange())
+      children_overflow_changed = true;
   }
   return children_overflow_changed;
 }
 
 bool LayoutBlock::RecalcOverflowAfterStyleChange() {
-  DCHECK(NeedsOverflowRecalcAfterStyleChange());
-
   bool children_overflow_changed = false;
   if (ChildNeedsOverflowRecalcAfterStyleChange())
     children_overflow_changed = RecalcChildOverflowAfterStyleChange();
