third_party/WebKit/Source/core/layout/LayoutObject.h
@@ -1103,6 +1103,8 @@ class CORE_EXPORT LayoutObject : public ImageResourceObserver,
   // to paint the current object.
   virtual void Paint(const PaintInfo&, const LayoutPoint& paint_offset) const;
 
+  virtual bool RecalcOverflowAfterStyleChange();
+
   // Subclasses must reimplement this method to compute the size and position
   // of this object and all its descendants.
   //
