third_party/WebKit/Source/core/layout/LayoutTableSection.cpp
@@ -1418,8 +1418,9 @@ void LayoutTableSection::ComputeOverflowFromDescendants() {
 #endif
 }
 
-bool LayoutTableSection::RecalcChildOverflowAfterStyleChange() {
-  DCHECK(ChildNeedsOverflowRecalcAfterStyleChange());
+bool LayoutTableSection::RecalcOverflowAfterStyleChange() {
+  if (!ChildNeedsOverflowRecalcAfterStyleChange())
+    return false;
   ClearChildNeedsOverflowRecalcAfterStyleChange();
   unsigned total_rows = grid_.size();
   bool children_overflow_changed = false;
@@ -1433,7 +1434,7 @@ bool LayoutTableSection::RecalcChildOverflowAfterStyleChange() {
     unsigned n_cols = NumCols(r);
     for (unsigned c = 0; c < n_cols; c++) {
       auto* cell = OriginatingCellAt(r, c);
-      if (!cell || !cell->NeedsOverflowRecalcAfterStyleChange())
+      if (!cell)
         continue;
       row_children_overflow_changed |= cell->RecalcOverflowAfterStyleChange();
     }
